[package]
name = "dynamic-pool"
version = "0.2.2"
authors = ["jake <jh@discordapp.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "a lock-free, thread-safe, dynamically-sized object pool."
repository = "https://github.com/discordapp/dynamic-pool"
homepage = "https://github.com/discordapp/dynamic-pool"
documentation = "https://docs.rs/dynamic-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = "0.2"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "bench"
harness = false